# llm-bootcamp

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
llm_bootcamp/: embed_wikipedia.py  main.py  question_answering.py  utils.py
notebooks/: canopy_data_prep.ipynb  wikipedia_question_answering.ipynb
