[tool.poetry]
name = "llm-bootcamp"
version = "0.1.0"
description = ""
authors = ["martinabeleda <martin.abeleda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
openai = "^1.1.1"
pandas = "^2.1.2"
tiktoken = "^0.5.1"
scipy = "^1.11.3"
loguru = "^0.7.2"

[tool.poetry.scripts]
qa = "llm_bootcamp.question_answering:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.4"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
