[tool.poetry]
name = "llm-bootcamp"
version = "0.1.0"
description = ""
authors = ["martinabeleda <martin.abeleda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
openai = "<1.0"
pandas = "*"
tiktoken = "*"
scipy = "*"
loguru = "*"
mwclient = "*"
mwparserfromhell = "*"
jupyter = ">=1.0.0"
wikipedia = "^1.4.0"
langchain = "*"
canopy-sdk = "^0.1.2"
datasets = "^2.14.6"

[tool.poetry.scripts]
qa = "llm_bootcamp.question_answering:main"
ew = "llm_bootcamp.embed_wikipedia:main"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
